# mina_ecommerce

./: README.md  pyproject.toml
authen/: admin.py  models.py  serializers.py  urls.py  views.py
authen/migrations/: 0001_initial.py  0002_profile_age_user_profile.py  0003_rename_age_user_profile_profile_age.py  0004_profile_image.py  0005_remove_profile_image.py
e_Commerce/: asgi.py  settings.py  urls.py  wsgi.py
order/: admin.py  models.py  serializers.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_orderitem.py  0003_alter_orderitem_order.py  0004_shippingadress.py  0005_alter_order_is_paid_alter_order_paid_at.py  0006_alter_order_delivered_at.py  0007_alter_order_is_paid.py
product/: admin.py  models.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_review.py  0003_remove_review_name_gte_0_alter_review_rating_and_more.py  0004_imageproduct.py
